--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=12591981
+spring.datasource.url=jdbc:postgresql://dpg-cmvr23qcn0vc73aqie9g-a.oregon-postgres.render.com:5432/ecommerce_0ope
+spring.datasource.username=ecommerce_0ope_user
+spring.datasource.password=5qifawyiDm8sSazTBLZ7NYNe1OTumjWd
